0.9.0
* tis: new word: tis-read-float (2011-01-03)
* stt: new words: +\" and +stt (2010-11-30)
* jos: new module: JSON output stream (2010-11-20)
* snl,scl,dnl,dcl: new word: *-sort (2010-08-23)
* car,dcl,bar,chs,dnl,hct,hnt,scl,str: new word: *-execute? (2010-08-07)
0.8.0
* Debian package of the library (2010-07-24)
* log: new word: log-with-flush (2010-06-06)
* md5: 64bit ready (2010-05-26)
* sh2: 64bit ready (2010-05-25)
* sh1: 64bit ready (2010-05-23)
* gmo: 64bit ready (2010-05-19)
* a32: bug fix and 64bit ready (2010-05-18)
* crc: 64bit ready (2010-05-16)
* gforth: support for command line arguments (2010-05-16, thanks to Josh)
* tos: new word: tos-write-fixed-point (2010-03-28)
* xis: new word: xis+dump-read-parameters (2010-03-21)
* xis: new word: xis+remove-read-parameters (2010-03-18)
* fwt: new module: fixed width types (2010-01-16)
* VFXForth: config.fs/make.fs added (2009-12-21, thanks to Stephen)
* b64: new module: Base64 module (2009-09-24)
* frc: rc+calc-gcd,frc+calc-lcm simplified (2009-09-18, thanks to Albert)
* scf: %q for quoted string added (2009-09-02)
* spf: %q for quoted string added (2009-09-02)
* scf: new module: Sscanf module (2009-08-19)
* spf: %e and %E for floats added (2009-08-16)
* tos: new word: tos-write-float (2009-07-01)
* gsv: new module: gtk-server interface (2009-06-20)
0.7.0
! stt: word for stringtable addition changed from ," to +" (2009-05-20)
* dom: small bug fixes for processing instruction (2008-11-18)
* zif: new module: GZip file reader  (2008-10-12)
* gzi: new module: GZip reader (2008-10-11)
* chs: new words: chs-set-list,chs-reset-list (2008-10-04)
* bar: new words: bar-set-list,bar-reset-list (2008-10-04)
* bar: new words: bar^or,bar^and,bar^xor,bar^move (2008-10-03)
* chs: new words: chs^or,chs^and,chs^xor (2008-10-01)
* rgx: classes added (2008-09-27)
* spf: new module: Sprintf module (2008-09-13)
* log: new module: Logging module (2008-09-09)
* bis: new module: Bit input stream (2008-08-20)